--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
     <section id="nosotros" class="container my-5">
         <h2 class="text-center mb-4 text-white animate__animated animate__fadeInDown">Nuestra Historia Mágica</h2>
         <div class="row align-items-center">
-            <div class="col-md-6 animate__animated animate__fadeInLeft">
-                <div class="bg-white p-4 rounded shadow">
+            <div class="col-lg-6 animate__animated animate__fadeInLeft">
+                <div class="p-4 rounded shadow text-black" style="background-image: url('img/paper.png'); background-size: cover; background-position: center;">
                     <h5 class="mb-3">Un lugar donde los felinos descubren su poder</h5>
                     <p>En lo profundo de un bosque encantado, donde las estrellas brillan con un resplandor especial y la luna susurra secretos ancestrales, nació la Escuela de Magia para Gatos. Fundada por el legendario gato hechicero Merlín Bigotes, nuestra academia ha sido el hogar de generaciones de gatos mágicos.</p>
                     <p>Aquí, cada maullido es un conjuro, cada salto es un hechizo en el aire, y cada ronroneo es un eco de la magia antigua. Desde hechizos de luz hasta encantamientos cósmicos, preparamos a nuestros alumnos felinos para descubrir sus dones ocultos y usarlos para el bien (o el caos divertido, dependiendo del día).</p>
                     <p>Si tu gato siente una extraña conexión con la luna, se comunica con criaturas invisibles o simplemente desaparece misteriosamente en casa... ¡puede que ya tenga la magia dentro! Únete a nosotros y descubre su verdadero potencial.</p>
                 </div>
             </div>
-            <div class="col-md-6 animate__animated animate__fadeInRight">
+            <div class="col-md-6 animate__animated animate__fadeInRight d-none d-lg-block">
                 <img src="img/escuela2.png" class="img-fluid rounded mb-4" alt="Gatos aprendiendo magia">
             </div>
         </div>
@@ -185,8 +185,7 @@
                 <div class="col-md-4 mb-4">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/1vkGxYx2vXg?si=AzIBx8imcEf_h83u" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
-                <div class="row justify-content-center col-md-4 mb-4">
-                    <div >
+                    <div class="col-md-4 mb-4">
                         <canvas id="magicCanvas" width="500" height="315" class="bg-white"></canvas>
                     </div>
                 </div>
@@ -196,6 +195,7 @@
 
     <!-- Contacto -->
     <section id="contacto" class="container my-5">
+        <h1 class="text-center mb-4 text-white">✦•┈๑⋅⋯·······⊹ ࣪ ˖*ੈ✩‧₊˚༺☆༻*ੈ✩‧₊˚⊹ ࣪ ˖·······⋯⋅๑┈•✦</h1>
         <h2 class="text-center mb-4 text-white">Contacto</h2>
         <div class="row">
             <div class="col-md-6 mx-auto">
